--- a/app/src/main/res/layout/activity_start_screen.xml
+++ b/app/src/main/res/layout/activity_start_screen.xml
@@ -6,23 +6,72 @@
   <data class="StartScreenActivityBinding">
     <variable
         name="viewModel"
-        type="com.crimson.addet.feature.startscreen.StartScreenViewModel"
+        type="com.crimson.addect.feature.startscreen.StartScreenViewModel"
         />
   </data>
   <FrameLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       tools:context=".feature.startscreen.StartScreenActivity"
-      >
+      android:background="@color/background">
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/app_name"
+        android:textColor="@color/white"
+        android:textSize="80sp"
+        android:layout_gravity="center_horizontal"
+        android:textAllCaps="true"
+        android:layout_marginTop="60dp"
+        android:textStyle="bold"/>
     <info.hoang8f.widget.FButton
         android:id="@+id/start_button"
         android:layout_width="250dp"
         android:layout_height="110dp"
         android:layout_gravity="center"
         android:text="@string/start"
+        android:textSize="23sp"
         android:textColor="@color/white"
-        app:buttonColor="@color/alizarin"
+        app:buttonColor="@color/button1"
         app:shadowEnabled="true"
-        app:cornerRadius="20dp"/>
+        app:cornerRadius="20dp"
+        android:onClick="@{() -> viewModel.startGame()}"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_gravity="bottom"
+        android:gravity="center"
+        android:layout_marginBottom="50dp">
+      <info.hoang8f.widget.FButton
+          android:id="@+id/achievements_button"
+          android:layout_width="130dp"
+          android:layout_height="wrap_content"
+          android:layout_gravity="center"
+          android:text="@string/achievements"
+          android:textColor="@color/white"
+          app:buttonColor="@color/button2"
+          app:shadowEnabled="true"
+          app:cornerRadius="10dp"
+          android:onClick="@{() -> viewModel.showAchievements()}"
+          android:layout_marginEnd="10dp"
+          android:textAllCaps="false"/>
+
+      <info.hoang8f.widget.FButton
+          android:id="@+id/leader_boards_button"
+          android:layout_width="130dp"
+          android:layout_height="wrap_content"
+          android:layout_gravity="center"
+          android:text="@string/leader_boards"
+          android:textColor="@color/white"
+          app:buttonColor="@color/button2"
+          app:shadowEnabled="true"
+          app:cornerRadius="10dp"
+          android:onClick="@{() -> viewModel.showLeaderBoards()}"
+          android:layout_marginStart="10dp"
+          android:textAllCaps="false"/>
+    </LinearLayout>
+
   </FrameLayout>
 </layout>
