--- a/app/src/main/res/layout/activity_play.xml
+++ b/app/src/main/res/layout/activity_play.xml
@@ -19,37 +19,53 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:text="@string/get_ready"
+        android:text="@{viewModel.highScore}"
         android:textColor="@color/white"
-        android:textSize="50sp"
-        android:layout_marginTop="100dp"/>
+        android:textSize="40sp"
+        android:layout_centerHorizontal="true"
+        android:layout_above="@+id/sum_text"
+        android:layout_marginBottom="50dp"
+        />
+
+    <TextView
+        android:id="@+id/sum_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:text="@{viewModel.sumText}"
+        android:textColor="@color/white"
+        android:textSize="60sp"
+        />
     <LinearLayout
-        android:layout_above="@+id/progressbar"
+        android:id="@+id/button_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
+        android:layout_above="@+id/progressbar"
         android:layout_marginBottom="30dp"
-        android:gravity="center">
+        android:gravity="center"
+        android:orientation="horizontal"
+        >
       <info.hoang8f.widget.FButton
           android:id="@+id/no_button"
           android:layout_width="130dp"
           android:layout_height="100dp"
+          android:layout_marginEnd="15dp"
           android:text="@string/no"
           android:textColor="@color/white"
           android:textSize="30sp"
           app:buttonColor="@color/button2"
-          android:layout_marginEnd="15dp"/>
+          />
 
       <info.hoang8f.widget.FButton
           android:id="@+id/yes_button"
           android:layout_width="130dp"
           android:layout_height="100dp"
+          android:layout_marginStart="15dp"
           android:text="@string/yes"
-          android:textSize="30sp"
           android:textColor="@color/white"
+          android:textSize="30sp"
           app:buttonColor="@color/button1"
-          android:layout_marginStart="15dp"/>
+          />
     </LinearLayout>
 
 
@@ -57,12 +73,13 @@
         android:id="@+id/progressbar"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:layout_marginStart="-25dp"
-        android:layout_marginEnd="40dp"
         android:layout_alignParentBottom="true"
+        android:layout_marginEnd="40dp"
+        android:layout_marginStart="-25dp"
         app:rcBackgroundColor="@color/background"
         app:rcMax="100"
         app:rcProgress="100"
-        app:rcProgressColor="@color/progress_bar_color"/>
+        app:rcProgressColor="@color/progress_bar_color"
+        />
   </RelativeLayout>
 </layout>
